<resources>
    <string name="app_name">Open Shop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email ID</string>
    <string name="password">Password (atleast 8 characters)</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="forgot_Password">Forgot Password?</string>
    <string name="signIn_Btn">Sign In</string>
    <string name="signUp_Btn">Sign Up!</string>
    <string name="noAccount">Dont have an Account?Sign Up!</string>
    <string name="alreadyAccount">Already have an Account?Sign In!</string>
    <string name="reset_email">Enter your registered Email!</string>
    <string name="reset_pass">RESET PASSWORD</string>
    <string name="fullName">Full Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="not_signed_in">Not Signed In</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>