<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_Password"
            android:textColor="#3EB255"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reset_email"
            android:textAlignment="center"
            android:textColor="#F56920"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/reset_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:theme="@style/RedProgress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            android:enabled="false"
            android:text="@string/reset_pass"
            android:textAllCaps="false"
            android:textColor="#80ffffff"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_email" />

        <!--<TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="300dp"
            android:text="Check your email!"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/reset_btn"
            app:layout_constraintTop_toBottomOf="@+id/reset_btn" /> -->

        <TextView
            android:id="@+id/reset_goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="&lt; &lt; Go back"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_btn" />

        <LinearLayout
            android:id="@+id/forgotPassword_email_icon_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/reset_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/reset_email"
            app:layout_constraintTop_toBottomOf="@+id/reset_email"
            app:layout_constraintVertical_bias="0.07999998">

            <ImageView
                android:id="@+id/forgotPassword_email_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@mipmap/redemail"
                android:visibility="gone" />

            <TextView
                android:id="@+id/forgotPassword_email_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Recovery email is sent successfully !"
                android:textColor="#11A10C"
                android:visibility="gone" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/forgotPassword_progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/RedProgress"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/reset_btn"
            app:layout_constraintEnd_toEndOf="@+id/forgotPassword_email_icon_container"
            app:layout_constraintStart_toStartOf="@+id/forgotPassword_email_icon_container"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword_email_icon_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>